fix card's icon spacings

--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ section.call-to-action.d-flex {
     justify-content: center;
     padding-top: 20px;
 }
+.card.col-4>.container.d-flex.direction-column{
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+}
+
 .container.d-flex>svg{
     fill: var(--respo-secondary);
     height: 60px;
